<resources>
    <string name="app_name">EventsBySicreed</string>
    <string name="tv_item_description">Descrição</string>
    <string name="tx_item_title">Título</string>
    <string name="tv_item_date">Data do Evento</string>
    <string name="tv_item_price">Preço do evento</string>
    <string name="an_error_occurred">Um erro foi encontrado</string>
    <string name="checkin">Checkin</string>
    <string name="share">Compartilhar</string>
    <string name="type_your_name_here">Digite seu nome aqui</string>
    <string name="type_your_email_here">Digite seu email aqui</string>
    <string name="confirm">Confirmar</string>
    <string name="share_with">Compartilhar com...</string>
    <string name="sucess_checkin">Checkin Realizado com Sucesso</string>
    <string name="error_checkin">Erro ao tentar realizar o Checkin</string>
</resources>