<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgEventDetails"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvNameEventDetails"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tx_item_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/imgEventDetails"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDescriptionEventDetails"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/white"
                android:text="@string/tv_item_description"
                android:textAlignment="inherit"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvNameEventDetails"
                app:layout_constraintTop_toBottomOf="@+id/tvNameEventDetails" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDateEventDetails"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tv_item_date"
                android:textColor="@color/white"
                android:textAlignment="inherit"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/imgEventDetails"
                app:layout_constraintTop_toBottomOf="@+id/imgEventDetails" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPriceEventDetails"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tv_item_price"
                android:textColor="@color/white"
                android:textAlignment="inherit"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tvDateEventDetails"
                app:layout_constraintTop_toBottomOf="@+id/tvDateEventDetails" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
